<resources>
    <string name="app_name">Bloodlife</string>

    <string name="weight">Enter Your Weight</string>
    <string name="height">Enter the Height</string>
    <string name="btncal">Find BMI</string>
    <string name="under">Under Weight</string>
    <string name="normal">Normal Weight</string>
    <string name="over">Over Weight</string>
    <string name="obesity">Obesity</string>
    <string name="Name">Enter your Name</string>
    <string name="Units">Number of Units</string>

    <string name="get_ready_to_help_some_people_lives_by_giving_out_some_drop_of_blood">Get ready to help some people lives by giving out some drop of blood</string>
    <string name="event_name">Event Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact_number">Contact Number</string>
    <string name="add">ADD</string>
    <string name="view">View</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="blgrp">Enter the blood group</string>
    <string name="Gender">Gender</string>
    <string name="Pno">Enter Phone Number</string>
    <string name="Post">Post</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="District">Enter the district</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>


    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>




    <string name="hintID">Please enter student IDff</string>
    <string name="hintName">Please enter student name</string>
    <string name="hindAdd">Please enter student address</string>
    <string name="hintCon">Please enter  number</string>
    <string name="stAdd">PLease enter student address</string>
    <string name="SaveB">Save</string>
    <string name="ShowB">Show</string>
    <string name="updateB">Update</string>
    <string name="deleteB">Delete</string>
    <string name="uname">uname</string>
    <string name="Enter_Name">uname</string>
    <string name="ublood">Enter Blood Group</string>
    <string name="uun_no">Number of units</string>
    <string name="uhospital">Enter hospital</string>
    <string name="uphone">Enter Phone Number</string>
    <string name="uhome">Enter Home Town</string>

</resources>